# luvatrix

./: .aider.chat.history.md  .aider.input.history  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  add_output_paths.py  fix_pbxproj.py  fix_pbxproj2.py  fix_pbxproj3.py  fix_pbxproj4.py  fix_pbxproj_final.py  luvatrix-core  main.py  perf_after.json  planning.md  pyproject.toml  setup.py
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.gateflow/: backlog.json  boards.json  config.json  legacy_ops_planning_archive_window.json  legacy_ops_planning_manifest.json  milestones.json  tasks.json
.gateflow/closeout/: a-037_closeout.md  a-048_closeout.md  apu-020_closeout.md  aru-016_closeout.md  au-018_closeout.md  au-019_closeout.md  f-001_closeout.md  f-003_closeout.md  f-011_closeout.md  f-014_closeout.md  f-024_closeout.md  f-027_closeout.md  f-028_closeout.md  f-031_closeout.md  f-034_closeout.md  f-038_closeout.md  f-042_closeout.md  fr-004_closeout.md  p-008_closeout.md  p-010_closeout.md  p-015_closeout.md  p-021_closeout.md  p-032_closeout.md  p-040_closeout.md  p-044_closeout.md  p-047_closeout.md  p-048_closeout.md  r-002_closeout.md  r-005_closeout.md  r-012_closeout.md  r-022_closeout.md  r-023_closeout.md  r-025_closeout.md  r-033_closeout.md  r-036_closeout.md  r-039_closeout.md  r-040_closeout.md  r-041_closeout.md  rf-009_closeout.md  rf-030_closeout.md  (+6 more)
.gateflow/reconciliation/: p-048_active_milestone_reconciliation.json
.github/: pull_request_template.md
.github/security/: agent-review-output.schema.json  agent-review-prompt.md
.github/workflows/: android-accelerator-wheels.yml  dev-required-tests.yml  gateflow-published-smoke.yml  m008-perf-gate.yml  m021-perf-gate.yml  macos-gui-smoke.yml  (+7 more)
.kilo/: kilo.json
android/: build.gradle.kts  settings.gradle.kts
discord/: discord.md
docs/: android_camera_on_device_iteration_guide.md  android_computational_camera_lab_implementation.md  android_computational_camera_lab_plan.md  android_raw_quality_speed_next_steps.md  android_startup_benchmarking.md  app_protocol.md  app_protocol_compatibility_policy.md  app_protocol_operator_runbook.md  app_protocol_v2_conformance_matrix.md  app_protocol_v2_migration.md  app_protocol_v2_superset_spec.md  app_protocol_variants_guide.md  debug_bundle_contract.md  debug_frame_step_perf_hud_contract.md  debug_manifest_policy_contract.md  debug_menu_adapter_spec.md  debug_menu_foundation_harness.md  debug_menu_functional_harness.md  debug_overlay_contract.md  debug_recording_contract.md  debug_replay_contract.md  debug_replay_perf_harness.md  debug_screenshot_contract.md  debug_visual_capture_harness.md  gateflow_0_1_0a3_rollout.md  gateflow_1_0_0_rollout.md  json_ui_compiler.md  luvatrix_plot_design.md  macos_debug_menu_runtime_wiring.md  macos_fallback_smoke.md  origin_reference_overlay_contract.md  p013_ci_gate_ownership_contract.md  p013_flaky_quarantine_workflow.md  p013_non_regression_gate_pack.md  p013_smoke_signal_artifacts.md  planes_canonical_ir_contract.md  planes_protocol_v0.md  planes_protocol_vnext.md  planes_v2_protocol_foundation.md  uf_029_closeout_harness.md  (+10 more)
examples/: m008_plot_data_ux_demo.py  m011_native_gantt_demo.py
gateflow/: CHANGELOG.md  README.md  pyproject.toml
gateflow/docs/: install.md  release.md
gateflow/src/gateflow/: __init__.py  __main__.py  api_shim.py  cli.py  config.py  import_luvatrix.py  io.py  policy.py  render.py  resources.py  scaffold.py  validate.py  workspace.py
gateflow/tests/: test_cli_smoke.py  test_gateflow_cli_api_shim.py  test_gateflow_cli_config.py  test_gateflow_cli_error_matrix.py  test_gateflow_cli_import_luvatrix.py  test_gateflow_cli_init.py  test_gateflow_cli_policy_guard.py  test_gateflow_cli_render.py  test_gateflow_cli_render_snapshots.py  test_gateflow_cli_resources.py  test_gateflow_cli_task_validation.py  test_gateflow_cli_validate.py
gateflow/tests/snapshots/gateflow_cli/: board.ascii  board.md
gateflow_cli/: __main__.py  api_shim.py  cli.py  config.py  policy.py  render.py  resources.py  scaffold.py  validate.py  workspace.py  wrapper.py
ios/: project.yml
luvatrix/: __init__.py  app.py
luvatrix_core/: __init__.py  _accel_native.c  _accel_native.pyx  accel.py  scaffold.py
luvatrix_core/templates/native/android/app/src/main/cpp/: CMakeLists.txt  luvatrix_vulkan_renderer.cpp
luvatrix_plot/: __init__.py  api.py  display.py  dynamic_axis.py  errors.py  figure.py  live.py  scales.py  series.py
luvatrix_ui/: __init__.py  component_schema.py  planes_protocol.py  planes_runtime.py  planes_v2_validator.py  ui_ir.py
scripts/: android_camera_quality_probe.py
tests/: test_accel_backends.py  test_android_benchmark_profile.py  test_android_boot_config.py  test_android_bootstrap.py  test_android_hdi_source.py  test_android_matrix_presenter.py  test_android_native_accel_packaging.py  test_android_packaging.py  test_android_runner.py  test_android_scene_target.py  test_android_sensors.py  test_android_startup_evidence.py  test_android_vulkan_target.py  test_app_runtime.py  test_audit_sink.py  test_build_p026_measured_summary.py  test_camera_burst_processing.py  test_camera_comparison_harness.py  test_camera_example.py  test_camera_processing_contract.py  test_camera_style_profiles.py  test_coordinates.py  test_debug_bundle.py  test_debug_capabilities.py  test_debug_frame_step.py  test_debug_manifest_policy.py  test_debug_menu_adapter.py  test_debug_menu_dispatch.py  test_debug_overlay.py  test_debug_recording.py  test_debug_replay.py  test_debug_screenshot.py  test_demo_app_protocol_example.py  test_display_runtime.py  test_energy_safety.py  test_flaky_quarantine.py  test_frame_pipeline.py  test_frame_rate_controller.py  test_full_suite_interactive_example.py  test_gateflow_cli_api_shim.py  (+87 more)
tools/: __init__.py  convert_font_to_bitmap_table.py  generate_android_launcher_icons.py
(+852 files in other folders)
