[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luvatrix"
version = "0.1.1"
description = "Luvatrix runtime and plotting toolkit"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy>=2.4.2",
  "Pillow>=10.3.0",
  "pytz>=2026.1.post1",
  "torch>=2.4.0",
]

[project.optional-dependencies]
plot = []
trading = [
  "coinbasetraderbot",
]
macos = [
  "pyobjc-core>=12.1",
  "pyobjc-framework-cocoa>=12.1",
  "pyobjc-framework-quartz>=12.1",
  "pyobjc-framework-Metal>=12.1",
]
vulkan = [
  "vulkan>=1.3.275.1",
]
web = [
  "websockets>=13.0",
]
ios = []
dev = [
  "matplotlib>=3.10.8",
]

[project.scripts]
luvatrix = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["luvatrix*", "luvatrix_core*", "luvatrix_plot*", "luvatrix_ui*"]

[tool.uv.sources]
coinbasetraderbot = { path = "../CoinbaseTraderBot", editable = true }
