[project]
name = "luvatrix"
version = "0.1.0"
description = "High-performance interactive UI runtime"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "numpy>=2.4.2",
  "Pillow>=10.3.0",
]

[project.optional-dependencies]
desktop = [
  "torch>=2.4.0",
]
macos = [
  "pyobjc-core>=12.1",
  "pyobjc-framework-cocoa>=12.1",
  "pyobjc-framework-quartz>=12.1",
  "pyobjc-framework-Metal>=12.1",
]
ios = [
  "pyobjc-framework-cocoa>=12.1",
  "pyobjc-framework-quartz>=12.1",
  "pyobjc-framework-Metal>=12.1",
]
vulkan = [
  "vulkan>=1.3.275.1",
]
web = [
]
dev = [
  "matplotlib>=3.10.8",
]

[project.scripts]
luvatrix = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["luvatrix*", "luvatrix_core*", "luvatrix_plot*", "luvatrix_ui*"]

[tool.setuptools.package-data]
"luvatrix_core.platform.web" = [
  "runtime_assets/index.html",
  "runtime_assets/runtime/*.js",
  "runtime_assets/runtime/package.json",
  "python_shim/luvatrix/*.py",
]

[tool.uv.sources]
coinbasetraderbot = { path = "../CoinbaseTraderBot", editable = true }
