[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luvatrix"
version = "0.2.4"
description = "Luvatrix runtime and plotting toolkit"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [
  { name = "Luvatrix contributors" },
]
keywords = ["apps", "runtime", "rendering", "ui", "visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "numpy>=2.4.2",
  "Pillow>=12.3.0",
]

[project.optional-dependencies]
desktop = [
  "torch>=2.4.0",
]
macos = [
  "torch>=2.4.0",
  "pyobjc-core>=12.1",
  "pyobjc-framework-cocoa>=12.1",
  "pyobjc-framework-quartz>=12.1",
  "pyobjc-framework-Metal>=12.1",
]
# iOS ABI-specific packages are installed into native PyPackages by setup_ios.sh.
# Do not put macOS PyObjC bindings here.
ios = [
]
vulkan = [
  "vulkan>=1.3.275.1",
]
web = [
]
android = [
]
dev = [
  "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/0202alcc/luvatrix"
Repository = "https://github.com/0202alcc/luvatrix"
Issues = "https://github.com/0202alcc/luvatrix/issues"

[project.scripts]
luvatrix = "main:main"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["luvatrix*", "luvatrix_core*", "luvatrix_plot*", "luvatrix_ui*"]

[tool.setuptools.package-data]
"luvatrix_core" = [
  "templates/native/android/**/*",
  "templates/native/ios/**/*",
]
"luvatrix_core.platform.web" = [
  "runtime_assets/index.html",
  "runtime_assets/runtime/*.js",
  "runtime_assets/runtime/package.json",
  "python_shim/luvatrix/*.py",
]

[tool.setuptools.exclude-package-data]
"luvatrix_core" = ["_accel_native.c", "_accel_native.pyx"]

[tool.uv.sources]
coinbasetraderbot = { path = "../CoinbaseTraderBot", editable = true }
