[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateflow"
version = "0.1.0a0"
description = "Standalone GateFlow planning CLI"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[project.scripts]
gateflow = "gateflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateflow*"]
