[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateflow"
version = "0.1.0a2"
description = "Standalone GateFlow planning CLI"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []
keywords = ["planning", "workflow", "cli", "gateflow"]

[project.urls]
Homepage = "https://github.com/0202alcc/luvatrix"
Documentation = "https://github.com/0202alcc/luvatrix/tree/main/gateflow"

[project.scripts]
gateflow = "gateflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateflow*"]
